plugins {
    id 'com.github.johnrengelman.shadow' version '5.1.0'
    id 'java'
}

group 'com.sanjay900'
version '1.0-SNAPSHOT'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'
    compile group: 'net.java.dev.jna', name: 'jna', version: '5.4.0'
}

test {
    jvmArgs '-Xshare:off'
    systemProperty 'java.system.class.loader', 'safeNativeCode.SafeClassLoader'
    systemProperty 'testing', 'true'
}

shadowJar {
    baseName = 'safeNativeCode'
    classifier = null
    version = null
    manifest {
        attributes(
            'Add-Opens': 'java.rmi/sun.rmi.registry'
        )
    }
    from sourceSets.main.allSource
}
tasks.test.dependsOn tasks.shadowJar
